<resources>
    <string name="app_name">MeuAppNovo</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="entrar">Entrar</string>
    <string name="tela_de_login">Tela de Login</string>
    <string name="tela_de_cadastro">Tela de Cadastro</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="n_o_tem_conta_cadastre_se">Não tem conta? Cadastre-se</string>
    <string name="j_tem_conta_fa_a_login">Já tem conta? Faça login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="n_mero_de_telefone">Número de Telefone</string>
    <string name="criar_conta2">Criar conta</string>
    <string name="nome">nome</string>
    <string name="telefone">telefone</string>
    <string name="email">email</string>
    <string name="senha2">senha</string>
    <string name="confirmar_senha2">confirmar senha</string>
    <string name="entrar3">Entrar</string>
    <string name="already_have_account" />
    <string name="login_1">Login</string>
    <string name="telefone_login">telefone</string>
    <string name="email_login">email</string>
    <string name="senha_login">senha</string>
    <string name="entrar_login">Entrar</string>
    <string name="esqueci_senha_login">Esqueci senha</string>
    <string name="esqueci_senha">Esqueci Senha</string>
    <string name="esqueci_senha2">Esqueci Senha</string>
    <string name="email3">email</string>
    <string name="digite_o_c_digo_enviado_para_o_seu_e_mail">Digite o código enviado para o seu e-mail</string>
    <string name="verificar_c_digo">Verificar Código</string>
    <string name="reenviar_c_digo">Reenviar código</string>
    <string name="atlas">ATLAS</string>
    <string name="get_involved_with_people_and_events_around_you">Get involved with people and events around you.</string>
    <string name="entrar5">Entrar</string>
    <string name="criar_conta6">Criar Conta →</string>
    <string name="conhe_a_uma_nova_nexperiencia">Conheça uma nova\nExperiencia.</string>
    <string name="atlas6">ATLAS</string>
    <string name="mudar_tela"><![CDATA[>]]></string>
</resources>